# ae

./: LICENSE  README.md
app/amid/: README.md  pubspec.yaml
app/amid/android/app/: build.gradle
app/amid/ios/Runner/: Info.plist
app/amid/ios/Runner.xcodeproj/: project.pbxproj
app/amid/lib/: main.dart
app/amid/lib/ui/pages/: home_page.dart
app/amid/lib/ui/widgets/: star_rating.dart
app/amid/lib/utils/: constant.dart  enum.dart
app/amigo/: pubspec.yaml
app/amigo/android/app/: build.gradle
app/amigo/ios/Runner.xcodeproj/: project.pbxproj
app/around/: .metadata  pubspec.yaml
app/around/android/app/: build.gradle
app/around/ios/Runner.xcodeproj/: project.pbxproj
app/around/linux/: CMakeLists.txt  my_application.cc
app/around/macos/Runner.xcodeproj/: project.pbxproj
app/around/macos/Runner/Configs/: AppInfo.xcconfig
app/around/web/: index.html
app/around/windows/: CMakeLists.txt
app/around/windows/runner/: Runner.rc  main.cpp
app/blabla/: README.md  pubspec.yaml
app/blabla/android/app/: build.gradle
app/blabla/ios/Runner.xcodeproj/: project.pbxproj
app/blabla/lib/: main.dart  run.dart
app/blabla/lib/app/pages/: sys_admob.dart
app/blabla/lib/core/lang/: lang.dart
app/dimdom/: README.md  pubspec.yaml
app/dimdom/android/app/: build.gradle
app/dimdom/ios/Runner/: Info.plist
app/dimdom/ios/Runner.xcodeproj/: project.pbxproj
app/dimdom/lib/: config.dart  main.dart  run.dart
app/dimdom/lib/app/pages/: home.dart
app/dimdom/lib/app/routes/: path.dart  router.dart
app/dimdom/test/: widget_test.dart
deployment/: melisearch.yaml  redis-cluster.yaml
server/: .env.sample  .gitignore  .rustfmt.toml  Cargo.toml  Cargo.tomlfz94G4  Dockerfile  Dockerfile.distroless  LICENSE  README.md  cmd_build.sh  cmd_docker.sh  cmd_prisma.sh  cmd_run.sh  cmd_run_api.sh  cmd_run_dashboard.sh  cmd_run_home.sh  cmd_test.sh  rust-ci.yml
server/.cargo/: config.toml
server/api/: Cargo.toml
server/api/src/: main.rs
server/api/src/handler/: mod.rs
server/api/src/handler/auth/: captha.rs  sms.rs
server/api/src/handler/shop/: item.rs
server/api/src/handler/user/: get.rs  set.rs
server/api/src/handler/websocket/: sse.rs  ws.rs
server/api/src/hdl/: errors.rs  mod.rs
server/api/src/hdl/auth/: email.rs  mod.rs
server/api/src/hdl/system/: mod.rs
server/api/src/hdl/user/: set.rs
server/api/src/hdl/ws/: mod.rs
server/api/src/hdl/xtransport/: webtransport.rs
server/api/src/resolvers/: gql.rs  mod.rs  ws.rs
server/center/: Cargo.toml
server/center/src/: lib.rs
server/center/src/common/: mod.rs
server/center/src/common/cfg/: db.rs  mod.rs
server/center/src/common/lib/oss/: aws.rs
server/center/src/common/mw/: acl_user.rs  cors.rs  crsf.rs
server/center/src/common/resp/: mod.rs
server/center/src/service/: mod.rs
server/center/src/service/article/: mod.rs
server/core/: Cargo.toml
server/core/src/: db.rs  lib.rs  prisma.rs
server/core/src/common/: mod.rs
server/core/src/common/cc/: mod.rs
server/core/src/common/cfg/: cfg.rs  db.rs  mod.rs
server/core/src/common/lib/: mod.rs
server/core/src/common/lib/ids/: mod.rs
server/core/src/common/lib/oss/: aws.rs
server/core/src/common/lib/sms/: mod.rs
server/core/src/common/mw/: acl_admin.rs  cors.rs  crsf.rs  jwt.rs  mod.rs  ws.rs
server/core/src/common/resp/: code.rs
server/core/src/model/: mod.rs
server/core/src/model/user/: get.rs  list.rs
server/core/src/service/: mod.rs  schema.rs
server/core/src/service/article/: get.rs
server/core/src/service/post/: types.rs
server/core/src/service/post/mutation/: mod.rs
server/core/src/service/post/query/: mod.rs
server/core/src/service/user/: mod.rs  types.rs
server/core/src/service/user/mutation/: mod.rs
server/core/src/service/user/query/: mod.rs
server/core/src/service/user/subsciption/: mod.rs
server/dao/: Cargo.toml
server/home/public/: index.html
server/home/src/: main.rs
server/im/: Cargo.toml
server/migrations/: 20240207084813_create_users.up.sql
server/pay/: Cargo.toml
server/prisma/: schema.prisma
server/prisma/migrations/20230601224548_initial/: migration.sql
server/prisma/prisma-cli/: Cargo.toml
server/redorm/: Cargo.toml  README.md
server/server/: .env
server/shop/: Cargo.toml  README.md  cmd_npm.sh  package.json
server/shop/src/handlers/: sign.rs  system.rs
server/shop/src/libraries/: email.rs
server/shop/templates/: index.stpl
server/shop/templates/assets/: app.js  tailwind.css
server/shop/templates/layouts/: _head.stpl
server/tools/: README.md
server/utils/: Cargo.toml
server/utils/src/: lib.rs
server/utils/src/cryto/: aes.rs  base32.rs  base62.rs  base64.rs  blake3.rs  ecc.rs  md5.rs  mod.rs  nanoid.rs  otp.rs  sha.rs  snowflake.rs  tlv.rs  url.rs  uuid.rs
server/utils/src/envx/: mod.rs
server/utils/src/file/: mod.rs
server/utils/src/image/: format.rs
server/utils/src/mail/: mod.rs
server/utils/src/math/: mod.rs
server/utils/src/mq/: kafka.rs
server/utils/src/net/: curl.rs  grahpql.rs
server/utils/src/number/: mod.rs
server/utils/src/random/: mod.rs
server/utils/src/sql/: builder.rs  condition.rs
server/utils/src/string/: mod.rs
server/utils/src/time/: mod.rs
server/utils/src/validator/: mod.rs
server/web/: Cargo.toml  README.md  cmd_npm.sh  cmd_run.sh  package.json  tailwind.config.cjs
server/web/src/: main.rs
server/web/src/common/: mod.rs  response.rs  smtp.rs
server/web/src/handlers/: index.rs  mod.rs  view.rs
server/web/src/hdl/: mod.rs
server/web/src/hdl/index/: mod.rs  tpl.rs  view.rs
server/web/src/hdl/sys/: mod.rs
server/web/src/libraries/: mod.rs
server/web/templates/: index.html  index.stpl  signUp.stpl
server/web/templates/assets/: app.css  main.css  style.css  tailwind.css
server/web/templates/assets/css/: style.css
server/web/templates/base/: aside.stpl  head.html  header.html  nav.html
server/web/templates/default/: index.html
server/web/templates/default/layouts/: base_header.html
server/web/templates/layouts/: head.stpl  main.stpl
web/home/: about.html  index.html
(+18 files in other folders)
