[workspace]
resolver = "2"
members = ["api", "admin", "core", "utils", "prisma/prisma-cli"]

[workspace.package]
authors = ["Athan <athan.seal@gmail.com>"]
edition = "2021"
homepage = "https://athanx.com/"
license = "Apache-2.0"
publish = false
repository = ""

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"   # Optimize for size.
panic = 'abort'
strip = true
# strip = "symbols" # none(false) debuginfo symbols(true).

[workspace.dependencies]
# base
axum = { version = "*", features = ["multipart", "ws"] }
axum-extra = "*"
axum-server = "*"
#axum-tungstenite="0"
tokio = "*"
dotenvy = "*"

# template render for SSR
tera = "1"

# encryption and serialization
aes = "*"
md5 = "0"
uuid = "*"
rand = "0"
serde = "1"
serde_json = "1"
serde_derive = "1"
scru128 = "*"
elliptic-curve = "0.13.5" # ecc

# database configuration
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", features = [
    "migrations",
    "sqlite",
    "postgresql",
    "mysql",
    # "mongodb",
    # "mssql",
] }

# tools
reqwest = "*"
captcha_rust = "*"
captcha-rs = "0"
user-agent-parser = "0"
headers = "0"
jsonwebtoken = "*"
once_cell = "1"
bytes = "1"
tower = { version = "0" }
tower-http = { version = "0", features = ["cors"] }
xdb = "*"                                           # https://github.com/lionsoul2014/ip2region
futures = "0"

# validator
validator = "0"
validator_derive = "0"

# cache
redis = { version = "^0.23.3" } # tokio-comp, tokio-native-tls-comp
cached = { version = "0", features = [
    "redis_store",
    "redis_async_std",
    "async",
] }

# message queue
tokio-nsq = "*" # I choose nsq instead of kafka, cause nsq already can fit for our bussiness

# search
meilisearch-sdk = "0.24.1"

# time
chrono = "0"
speedate = "0"
delay_timer = "0"

# log
log = "*"
fast_log = { version = "*", features = ["lz4", "zip", "gzip"] }
anyhow = "1"
tracing = "0"
tracing-appender = "0"
# tracing-log = "0.1"
tracing-subscriber = "0"

#ws
#futures-channel = "0.3.21"
futures-util = "*"
#tokio-tungstenite = "*"

# s3
aws-config = "*"
aws-sdk-s3 = "*"


# tools 
ravif = "*" # avif image format convert