[package]
name = "api"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

axum = { workspace = true, features = ["multipart"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
axum-extra = { workspace = true, features = ["cookie"] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "signal",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }

#
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "local-time",
    "registry",
] }
log = { workspace = true, default-features = true }
fast_log = { workspace = true, default-features = true }
tower-http = { workspace = true, features = ["cors"] }