[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }

# outter
tokio = { workspace = true }

prisma-client-rust = { workspace = true, features = [
  "migrations",
  "sqlite",
  "postgresql",
  "mysql",
  "mongodb",
  "mssql",
] }

dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
serde_derive = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
