[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }

# outter
tokio = { workspace = true }

axum = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
serde_derive = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
tower-http = { workspace = true, features = ["cors"] }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
redis = { workspace = true, features = ["r2d2", "cluster-async", "tokio-comp"] }
