[package]
name = "pay"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
