[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

axum = { workspace = true, features = ["multipart"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
axum-extra = { workspace = true, features = ["spa"] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "signal",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }

sailfish = "0.8.3"
#
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "local-time",
    "registry",
] }
log = { workspace = true, default-features = true }
fast_log = { workspace = true, default-features = true }
tower-http = { workspace = true, features = ["cors"] }