[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.2" }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
#axum-tungstenite="0"
tokio = { version = "1.36.0", features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "signal",
] }
dotenvy = "0.15.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
serde_with = "*"

sailfish = "0.8.3"
#
tracing = "0"
tracing-appender = "0"
tracing-subscriber = { version = "*", features = [
    "json",
    "env-filter",
    "local-time",
    "registry",
] }
log = "*"
fast_log = { version = "*", features = ["lz4", "zip", "gzip"] }

lettre = "*" # email send
